force-app/main/default/objects/Pallet_Sales__c/Pallet_Sales__c.object-meta.xml
<CustomObject>
    <label>Pallet Sales</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Pallet Sales</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pallet Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>