force-app/main/default/objects/Pallet_Sales__c/fields/Other_Series__c.field-meta.xml
<CustomField>
    <fullName>Other_Series__c</fullName>
    <label>Other Series</label>
    <length>20</length>
    <type>Text</type>
</CustomField>