force-app/main/default/objects/Pallet_Sales__c/fields/Pallet_Series__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Series__c</fullName>
    <label>Pallet Series</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ash Creek</fullName>
            </value>
            <value>
                <fullName>Belmar</fullName>
            </value>
            <value>
                <fullName>Bliss (100sf = 1 pallet)</fullName>
            </value>
            <value>
                <fullName>Montego</fullName>
            </value>
            <value>
                <fullName>Pozzalo</fullName>
            </value>
            <value>
                <fullName>Sequoyah</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>