force-app/main/default/objects/Pallet_Sales__c/validationRules/Other_Series_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Series_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL(  Pallet_Series__c , &quot;Other&quot;),ISBLANK(  Other_Series__c ))</errorConditionFormula>
    <errorDisplayField>Other_Series__c</errorDisplayField>
    <errorMessage>If series is &quot;Other&quot;, you must fill in the name of the Series.</errorMessage>
</ValidationRule>